--- a/nginx.conf
+++ b/nginx.conf
@@ -1,21 +1,27 @@
-events {
+events {}
 
-}
 http {
     include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
     server {
         listen 80 default_server;
         root /app/public;
 
         index index.php index.html index.htm;
 
-        # uncomment line below to redirect all requests to index.php
+        # Uncomment the line below to redirect all requests to index.php
         try_files $uri $uri/ /index.php?$args;
 
         location ~ \.php$ {
+            include fastcgi_params;
             fastcgi_pass php:9000;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            include fastcgi_params;
+            fastcgi_param PATH_INFO $fastcgi_path_info;
+        }
+
+        location ~ /\.ht {
+            deny all;
         }
     }
 }
