--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -8,6 +8,8 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
       - ./app:/app
+    depends_on:
+      - php
   php:
     build:
       context: .
@@ -24,12 +26,13 @@ services:
     volumes:
       - mysqldata:/var/lib/mysql
     ports:
-      - 3306:3306
+      - "3306:3306"
   phpmyadmin:
     image: phpmyadmin:latest
     ports:
-      - 8080:80
+      - "8080:80"
     environment:
       - PMA_HOST=mysql
+
 volumes:
   mysqldata: {}
